--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Funding Agent Dashboard</title>
     <meta name="description" content="Professional reporting dashboard for Funding Agent with campaign analytics, lead management, and response tracking" />
+    <link rel="icon" type="image/svg+xml" href="https://cdn.prod.website-files.com/67efd26a8d1c97e288c50c5b/67efe2bf18508d8ae1163d12_Group%2091.svg" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
   </body>
 </html>
