Implement theme context and update components for theme awareness; refactor charts and dashboard elements to support dark mode. Update favicon in index.html and adjust styles for improved visual consistency across the application.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Funding Agent Dashboard</title>
     <meta name="description" content="Professional reporting dashboard for Funding Agent with campaign analytics, lead management, and response tracking" />
-    <link rel="icon" type="image/svg+xml" href="https://cdn.prod.website-files.com/67efd26a8d1c97e288c50c5b/67efe2bf18508d8ae1163d12_Group%2091.svg" />
+    <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/67efd26a8d1c97e288c50c5b/67efd8ff3f6ff09f418f56db_Group%2086.png" />
   </head>
   <body>
     <div id="root"></div>
